force-app/main/default/objects/Promotion_Rule__c/Promotion_Rule__c.object-meta.xml
<CustomObject>
    <label>Promotion Rule</label>
    <pluralLabel>Promotion Rules</pluralLabel>
    <description>Promotion Rule</description>
    <nameField>
        <label>Promotion Rule Name</label>
        <type>AutoNumber</type>
        <displayFormat>PRUL-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>