force-app/main/default/objects/Promotion_Rule__c/fields/Min_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Qty__c</fullName>
    <label>Min Qty</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Min Qty</description>
</CustomField>