force-app/main/default/objects/Promotion_Rule__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Text</type>
    <length>40</length>
    <description>Product Family</description>
</CustomField>