force-app/main/default/objects/Promotion_Rule__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promotion</label>
    <type>MasterDetail</type>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Promotion</description>
</CustomField>